<resources>
    <string name="app_name">梯+</string>
    <string name="title_notification">通知</string>
    <string name="title_apps">应用</string>
    <string name="title_me">我</string>

    <!--easy mob strings-->
    <string name="call_duration">通话时长</string>
    <string name="Refused">拒绝</string>
    <string name="The_other_party_has_refused_to">对方已拒绝</string>
    <string name="The_other_is_not_online">对方不在线</string>
    <string name="The_other_is_on_the_phone">对方不再电话旁</string>
    <string name="The_other_party_did_not_answer">对方未接听</string>
    <string name="did_not_answer">无响应</string>
    <string name="Has_been_cancelled">已取消</string>
    <string name="call_version_inconsistent">通话版本不一致</string>
    <string name="Is_not_yet_connected_to_the_server">还未连接到服务器</string>
    <string name="illegal_user_name">不合法的用户名</string>
    <string name="can_not_connect_chat_server_connection">无法连接聊天服务器</string>
    <string name="recording_video">录制视频</string>
    <string name="switch_camera">切换摄像头</string>
    <string name="capture_image">截图</string>
    <string name="mute">静音</string>
    <string name="Hands_free">免提</string>
    <string name="hang_up">挂断</string>
    <string name="answer">接听</string>
    <string name="Are_connected_to_each_other">是否已互相连接</string>
    <string name="direct_call">通话</string>
    <string name="relay_call">通话</string>
    <string name="In_the_call">正在通话中</string>
    <string name="network_unavailable">网络不可用</string>
    <string name="no_call_data">无通话数据</string>
    <string name="network_unstable">网络不稳定</string>
    <string name="The_other_party_refused_to_accept">对方拒绝接听</string>
    <string name="Connection_failure">连接失败</string>
    <string name="The_other_party_is_not_online">对方不在线</string>
    <string name="The_other_is_on_the_phone_please">对方在电话旁</string>
    <string name="The_other_is_hang_up">对方挂断</string>
    <string name="hanging_up">挂断</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="scan">扫码</string>
    <string name="profile">个人信息</string>
    <string name="my_message">我的消息</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="logout">退出登录</string>
    <string name="title_about_tijia">关于梯+</string>
    <string name="version">当前版本</string>
    <string name="tutorial">新手指引</string>
    <string name="feedback">帮助与反馈</string>
    <string name="avatar">头像</string>
    <string name="device_manage">设备管理</string>
    <string name="maintenance_manage">维保管理</string>
    <string name="call">对讲</string>
    <string name="run_monitor">运行监测</string>
    <string name="video_call">视频对讲</string>
    <string name="on_duty_record">值班记录</string>
    <string name="inspection_record">巡检记录</string>
    <string name="fault_record">故障记录</string>
    <string name="more">更多</string>
    <string name="search">搜索</string>
    <string name="login">登陆</string>
    <string name="device_list">设备列表</string>
    <string name="repair_record">维修记录</string>
    <string name="maintain_record">保养记录</string>
    <string name="my">我的</string>
    <string name="all">所有</string>
    <string name="add">新增</string>
    <string name="add_repair_record">新增维修记录</string>
    <string name="add_fault_record">新增故障记录</string>
    <string name="add_inspection_record">新增巡检记录</string>
    <string name="add_on_duty_record">新增值班记录</string>
    <string name="device_detail">设备详情</string>
    <string name="list_title_sn">注册代码:</string>
    <string name="list_title_belong_org">所属单位:</string>
    <string name="list_title_area">安装区域:</string>
    <string name="elevator_params">电梯参数</string>
    <string name="list_title_elevator_name">使用编号:</string>
    <string name="list_title_elevator_type">电梯类型:</string>
    <string name="list_title_maintain_org">维保单位:</string>
    <string name="list_title_start_using_date">投用日期:</string>
    <string name="list_title_manufacturer">制造厂家:</string>
    <string name="list_title_product_model">产品型号:</string>
    <string name="list_title_floor_staion_num">总层站数:</string>
    <string name="list_title_maintenance_ppl">维保人员:</string>
    <string name="go_to_pc_to_see_complete_parameter">完整参数请登陆pc端管理系统查看</string>
    <string name="start_time">开始时间:</string>
    <string name="list_title_start_time">开始时间:</string>
    <string name="list_title_executor">执行人员:</string>
    <string name="list_title_check_content">检查内容:</string>
    <string name="list_title_repair_content">维修内容:</string>
    <string name="fault_record_detail">故障详情</string>
    <string name="list_title_occur_time">发生时间:</string>
    <string name="list_title_handle_status">处理状态:</string>
    <string name="list_title_handle_result">处理结果:</string>
    <string name="list_title_handle_ppl">处理人员:</string>
    <string name="unhandle">未受理</string>
    <string name="handled">已完成</string>
    <string name="handling">处理中</string>
    <string name="repair_record_detail">维修记录详情</string>
    <string name="to_be_evaluated">待评价</string>
    <string name="publish_evaluation">发表评价</string>
    <string name="maintenance_plan">保养计划</string>
    <string name="on_duty_and_inspection">值班巡检</string>
    <string name="announcement">通知公告</string>
    <string name="my_notification">我的提醒</string>
    <string name="system_message">系统消息</string>
    <string name="list_title_call_org">来电单位:</string>
    <string name="list_title_call_reason">来电事由:</string>
    <string name="list_title_related_elevator">相关电梯:</string>
    <string name="list_title_on_duty_ppl">值班人员:</string>
    <string name="list_title_call_content">来电内容:</string>
    <string name="blank">无</string>
    <string name="year">年</string>
    <string name="month">月</string>
    <string name="no_maintenance_plan">今日无保养任务</string>
    <string name="title_terminal_list">终端列表</string>
    <string name="refresh">刷新</string>
    <string name="realtime_monitor">运行监控</string>
    <string name="list_title_direction">运行方向：</string>
    <string name="list_title_station">当前楼层:</string>
    <string name="list_title_door_status">轿门状态:</string>
    <string name="title_video_monitor">视频监控</string>
    <string name="list_title_have_ppl">是否有人:</string>
    <string name="list_title_fault_type">故障类型:</string>
    <string name="list_title_car_temp_hum">温 湿度:</string>
    <string name="list_title_door_lock">门锁回路:</string>
    <string name="list_title_run_status">运行状态:</string>
    <string name="list_title_elevator_lock">是否锁梯:</string>
    <string name="list_title_is_overload">是否超载:</string>
    <string name="list_title_system_power">系统电源:</string>
    <string name="list_title_flat_floor_status">平层状态:</string>
    <string name="list_title_brake_status">抱闸状态:</string>
    <string name="list_title_operation_mode">操作模式:</string>
    <string name="list_title_safety_circuit">安全回路:</string>
    <string name="username">用户名</string>
    <string name="password">密码</string>


</resources>
