<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    android:paddingLeft="12dp"
    android:paddingRight="12dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="36dp">

        <TextView
            android:id="@+id/tv_elevator_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/primary_text_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_arrow_right_gray_24dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.1dp"
            android:layout_alignParentBottom="true"
            android:background="@color/colorDivider" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/list_title_station"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/secondary_text_size" />

                <TextView
                    android:id="@+id/tv_floor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/secondary_text_size" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/list_title_direction"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/secondary_text_size" />

                <TextView
                    android:id="@+id/tv_direction"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/secondary_text_size" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/list_title_door_status"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/secondary_text_size" />

                <TextView
                    android:id="@+id/tv_door_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/secondary_text_size" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/list_title_have_ppl"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/secondary_text_size" />

                <TextView
                    android:id="@+id/tv_have_ppl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/secondary_text_size" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/list_title_operation_mode"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/secondary_text_size" />

                <TextView
                    android:id="@+id/tv_operation_mode"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/secondary_text_size" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/list_title_car_temp_hum"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/secondary_text_size" />

                <TextView
                    android:id="@+id/tv_car_tem_hum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/secondary_text_size" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/list_title_safety_circuit"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/secondary_text_size" />

                <TextView
                    android:id="@+id/tv_safety_circuit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/secondary_text_size" />
            </RelativeLayout>


        </LinearLayout>

        <View
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.1" />

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/list_title_run_status"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/secondary_text_size" />

                <TextView
                    android:id="@+id/tv_run_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/secondary_text_size" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/list_title_door_lock"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/secondary_text_size" />

                <TextView
                    android:id="@+id/tv_door_lock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/secondary_text_size" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/list_title_elevator_lock"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/secondary_text_size" />

                <TextView
                    android:id="@+id/tv_elevator_lock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/secondary_text_size" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/list_title_is_overload"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/secondary_text_size" />

                <TextView
                    android:id="@+id/tv_is_overload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/secondary_text_size" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/list_title_system_power"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/secondary_text_size" />

                <TextView
                    android:id="@+id/tv_system_power"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/secondary_text_size" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/list_title_flat_floor_status"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/secondary_text_size" />

                <TextView
                    android:id="@+id/tv_flat_floor_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/secondary_text_size" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="5dp"
                android:paddingTop="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:text="@string/list_title_brake_status"
                    android:textColor="@color/colorPrimaryText"
                    android:textSize="@dimen/secondary_text_size" />

                <TextView
                    android:id="@+id/tv_brake_status"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/secondary_text_size" />
            </RelativeLayout>

        </LinearLayout>
    </LinearLayout>

</LinearLayout>